<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.mujin</groupId>
    <artifactId>mujin-framework</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>mujin-framework</name>
    <modules>
        <module>mujin-commons</module>
        <module>mujin-boot-starter</module>
    </modules>

    <properties>
        <!-- 基础编译配置（简化：release 替代 source/target，兼容 JDK 9+） -->
        <maven.compiler.release>21</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <!-- 插件版本（升级 Javadoc 插件适配 JDK 21） -->
        <maven.compiler.plugin.version>3.14.1</maven.compiler.plugin.version>
        <maven.source.version>3.4.0</maven.source.version>
        <!-- 适配 JDK 21 的稳定版 -->
        <maven.doc.version>3.6.3</maven.doc.version>
        <maven.checkstyle.version>3.5.0</maven.checkstyle.version>
        <checkstyle.config.location>${maven.multiModuleProjectDirectory}/checkstyle.xml</checkstyle.config.location>
        <checkstyle.suppressions.location>${maven.multiModuleProjectDirectory}/suppressions.xml</checkstyle.suppressions.location>
        <!-- 默认关闭 Checkstyle（CI 可通过 -Dcheckstyle.skip=false 显式开启） -->
        <checkstyle.skip>true</checkstyle.skip>
        <checkstyle.failsOnError>false</checkstyle.failsOnError>
        <checkstyle.violationSeverity>warning</checkstyle.violationSeverity>

        <!-- 依赖版本 -->
        <spring.boot.version>3.5.8</spring.boot.version>
        <lombok.version>1.18.42</lombok.version>
        <hutool.version>5.8.41</hutool.version>
        <jackson.version>2.19.2</jackson.version>
        <apache-lang3.version>3.20.0</apache-lang3.version>
        <mybatis-plus.version>3.5.15</mybatis-plus.version>
        <expiringmap.version>0.5.11</expiringmap.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- Spring Boot 依赖管理（核心） -->
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring.boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- MyBatis-Plus BOM -->
            <dependency>
                <groupId>com.baomidou</groupId>
                <artifactId>mybatis-plus-bom</artifactId>
                <version>${mybatis-plus.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- 工具类依赖 -->
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-lang3</artifactId>
                <version>${apache-lang3.version}</version>
            </dependency>
            <dependency>
                <groupId>cn.hutool</groupId>
                <artifactId>hutool-bom</artifactId>
                <version>${hutool.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
            </dependency>
            <!-- Jackson（移除冗余的 jackson-datatype.version，统一用 jackson.version） -->
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-databind</artifactId>
                <version>${jackson.version}</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.datatype</groupId>
                <artifactId>jackson-datatype-jsr310</artifactId>
                <version>${jackson.version}</version>
            </dependency>
            <dependency>
                <groupId>net.jodah</groupId>
                <artifactId>expiringmap</artifactId>
                <version>${expiringmap.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <!-- 核心优化：插件版本统一管理，子模块按需继承（避免强制执行） -->
        <pluginManagement>
            <plugins>
                <!-- 编译插件（适配 Lombok + JDK 21 + 消除 Lint 警告） -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${maven.compiler.plugin.version}</version>
                    <configuration>
                        <!-- 简化：替代 source/target -->
                        <release>${maven.compiler.release}</release>
                        <encoding>UTF-8</encoding>
                        <compilerArgs>
                            <!-- 保留参数名，便于反射 -->
                            <arg>-parameters</arg>
                            <!-- 显示泛型未检查警告（可选） -->
                            <arg>-Xlint:unchecked</arg>
                            <!-- 显示过时API警告（可选） -->
                            <arg>-Xlint:deprecation</arg>
                            <!-- 隐藏无关的 options 提示 -->
                            <arg>-Xlint:-options</arg>
                        </compilerArgs>
                        <!-- 关键：适配 Lombok 注解处理器 -->
                        <annotationProcessorPaths>
                            <path>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok</artifactId>
                                <version>${lombok.version}</version>
                            </path>
                        </annotationProcessorPaths>
                    </configuration>
                </plugin>

                <!-- 源码打包插件（统一管理，子模块按需执行） -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-source-plugin</artifactId>
                    <version>${maven.source.version}</version>
                    <executions>
                        <execution>
                            <id>attach-sources</id>
                            <goals>
                                <goal>jar-no-fork</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>

                <!-- Javadoc 插件（升级版本 + 精简配置 + 适配 JDK 21） -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-javadoc-plugin</artifactId>
                    <version>${maven.doc.version}</version>
                    <configuration>
                        <!-- 错误不终止构建 -->
                        <failOnError>false</failOnError>
                        <encoding>UTF-8</encoding>
                        <!-- 禁用所有文档检查 -->
                        <doclint>none</doclint>
                        <additionalOptions>
                            <!-- 忽略源码错误 -->
                            <additionalOption>--ignore-source-errors</additionalOption>
                            <!-- 兼容注释脚本 -->
                            <additionalOption>--allow-script-in-comments</additionalOption>
                        </additionalOptions>
                        <additionalJOptions>
                            <!-- 抑制Javadoc警告 -->
                            <additionalJOption>-Xdoclint:none</additionalJOption>
                            <additionalJOption>--release</additionalJOption>
                            <!-- 适配 JDK 21 -->
                            <additionalJOption>21</additionalJOption>
                        </additionalJOptions>
                    </configuration>
                    <executions>
                        <execution>
                            <id>attach-javadocs</id>
                            <goals>
                                <!-- 生成Javadoc Jar -->
                                <goal>jar</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>

                <!-- Checkstyle 插件（统一规则，子模块按需激活） -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-checkstyle-plugin</artifactId>
                    <version>${maven.checkstyle.version}</version>
                    <dependencies>
                        <!-- 9.x 内核支持 JDK 21 + Lambda 参数等 -->
                        <dependency>
                            <groupId>com.puppycrawl.tools</groupId>
                            <artifactId>checkstyle</artifactId>
                            <version>10.17.0</version>
                        </dependency>
                    </dependencies>
                    <configuration>
                        <configLocation>${checkstyle.config.location}</configLocation>
                        <suppressionsLocation>${checkstyle.suppressions.location}</suppressionsLocation>
                        <includeTestSourceDirectory>true</includeTestSourceDirectory>
                        <enableRulesSummary>true</enableRulesSummary>
                        <consoleOutput>true</consoleOutput>
                        <!-- 渐进式：默认仅警告，不阻断构建；CI 可通过 -Dcheckstyle.skip=false 打开 -->
                        <failsOnError>${checkstyle.failsOnError}</failsOnError>
                        <violationSeverity>${checkstyle.violationSeverity}</violationSeverity>
                        <linkXRef>false</linkXRef>
                        <skip>${checkstyle.skip}</skip>
                        <sourceDirectories>
                            <sourceDirectory>${project.build.sourceDirectory}</sourceDirectory>
                        </sourceDirectories>
                    </configuration>
                    <executions>
                        <execution>
                            <id>validate-style</id>
                            <phase>validate</phase>
                            <goals>
                                <goal>check</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>

        <!-- 父模块仅执行编译插件（核心插件），其他插件由子模块按需引用 -->
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
            </plugin>
        </plugins>
    </build>

</project>